fix collapsed margins

--- a/res/style.css
+++ b/res/style.css
@@ -80,7 +80,7 @@ a:hover {text-decoration: underline;}
 	box-sizing: border-box;
 	height: 3.5em;
 	padding: 0.5em;
-	margin: 10px 0;
+	margin: 20px 0;
 	overflow: hidden;
 	border-radius: 2px;
 	box-shadow: none;
